# MusicAutoFormatter

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  PROPOSAL_LASTFM_ALBUM_ART.md  README.md  advanced_metadata_sync_plan.md  formatter.py  main.py  metadata.json.example  metadata_sync_plan.md  plan.md  pyproject.toml  run.py  run_batch.py
.agent/skills/unit-testing/: SKILL.md
.agent/workflows/: testing.md  unit-tests.md  uv-run.md
.agents/workflows/: test-formatter.md
src/: __init__.py  audio_utils.py  constants.py  cover_finder.py  file_utils.py  formatter.py  image_utils.py  library_manager.py  logger_config.py  metadata_analyzer.py  metadata_processor.py  scanner_utils.py
src/core/: config.py  constants.py  formatter.py  logger_config.py
src/metadata/: art_extractor.py  cover_finder.py  lastfm_client.py  metadata_analyzer.py  metadata_processor.py  metadata_utils.py  sync_config.py
src/processing/: audio_utils.py  file_utils.py  image_utils.py
src/utils/: filename_parser.py
tests/core/: test_config.py  test_constants.py  test_formatter.py  test_logger_config.py
tests/metadata/: test_art_extractor.py  test_cover_finder.py  test_lastfm_client.py  test_metadata_analyzer.py  test_metadata_processor.py  test_metadata_utils.py  test_sync_config.py
tests/processing/: test_audio_utils.py  test_file_utils.py  test_image_utils.py
tests/utils/: test_filename_parser.py
